--- a/birds.html
+++ b/birds.html
@@ -1,7 +1,6 @@
 ---js
 {
-title: "Birds - Nature Companion",
-heading: "Birds",
+title: "Birds",
 layout: "type.html",
 items: function() { return this.collections.bird; }
 }
