--- a/herps.html
+++ b/herps.html
@@ -1,7 +1,6 @@
 ---js
 {
-title: "Reptiles & Amphibians - Nature Companion",
-heading: "Reptiles & Amphibians",
+title: "Reptiles & Amphibians",
 layout: "type.html",
 items: function() { return this.collections.herp; }
 }
