--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
----
-title: "Nature Companion"
----
 <!doctype html>
 <html class="photobgnd">
 
@@ -20,36 +17,30 @@ title: "Nature Companion"
 </body>
 
 <div class="container">
-    <div class="group">
-        <a href="birds">
-            <image class="icon" src="images/birds.svg" />
-            <div class="label">Birds</div>
-        </a>
-    </div>
-    <div class="group">
-        <a href="insects">
-            <image class="icon" src="images/insects.svg" />
-            <div class="label">Insects</div>
-        </a>
-    </div>
-    <div class="group">
-        <image class="icon" src="images/plants.svg" />
-        <div class="label">Plants</div>
-    </div>
-    <div class="group">
-        <a href="herps">
-            <image class="icon" src="images/herps.svg" />
-            <div class="label">Reptiles&nbsp;&amp;<br />Amphibians</div>
-        </a>
-    </div>
-    <div class="group">
-        <image class="icon" src="images/trees.svg" />
-        <div class="label">Trees&nbsp;&amp;<br />Shrubs</div>
-    </div>
-    <div class="group">
+    <a href="birds" class="group">
+        <image class="icon" src="images/birds.svg" />
+        <div class="label">Birds</div>
+    </a>
+    <a href="animals" class="group">
         <image class="icon" src="images/animals.svg" />
         <div class="label">Animals</div>
-    </div>
+    </a>
+    <a href="plants" class="group">
+        <image class="icon" src="images/plants.svg" />
+        <div class="label">Plants</div>
+    </a>
+    <a href="herps" class="group">
+        <image class="icon" src="images/herps.svg" />
+        <div class="label">Reptiles&nbsp;&amp;<br />Amphibians</div>
+    </a>
+    <a href="insects" class="group">
+        <image class="icon" src="images/insects.svg" />
+        <div class="label">Insects&nbsp;&amp;<br />Spiders</div>
+    </a>
+    <a href="trees" class="group">
+        <image class="icon" src="images/trees.svg" />
+        <div class="label">Trees&nbsp;&amp;<br />Shrubs</div>
+    </a>
 </div>
 
 </html>
