--- a/insects.html
+++ b/insects.html
@@ -1,7 +1,6 @@
 ---js
 {
-title: "Insects - Nature Companion",
-heading: "Insects",
+title: "Insects & Spiders",
 layout: "type.html",
 items: function() { return this.collections.insect; }
 }
