--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
             <div class="label">Trees&nbsp;&amp;<br />Shrubs</div>
         </a>
     </div>
-
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then((reg) => {
+                        console.log('Service worker registered.', reg);
+                    });
+            });
+        }
+    </script>
 </body>
 
 </html>
