put back X close button
needed for "back" when standalone

--- a/search.html
+++ b/search.html
@@ -16,6 +16,7 @@ help_section: "search"
 
 <body onload="start()">
     <div class="header">
+        {{> closebutton.html }}
         {{> helpbutton.html }}
         <h1>
             <div class="header-left">
