--- a/search.html
+++ b/search.html
@@ -7,14 +7,50 @@ help_section: "search"
 
 <head lang="en">
     {{> head.html }}
-    <style type="text/css">
-        .item {
-            display: none;
+    <style>
+        .hover:hover {
+            filter: invert(100);
+        }
+        ::placeholder {
+            color: #ccc;
+            font-size: 80%;
+            font-style: italic;
+        }
+        .term {
+            color: #666;
+            cursor: pointer;
+            border: 1px solid white;
+            border-radius: .5em;
+            padding: .2em;
+            margin: .1em;
+            line-height: 200%;
+        }
+        .term:hover {
+            border-color: blue;
+        }
+        .close-icon {
+            display: inline-block;
+            width: 1em;
+            height: 1em;
+            position: relative;
+            z-index: 1;
+            right: 2.7em;
+            top: 0;
+            bottom: .3em;
+            text-align: center;
+            padding-bottom: .3em;
+            font-family: sans-serif;
+            font-size: 2em;
+            color: #888;
+            cursor: pointer;
+        }
+        .list {
+            margin-top: 0;
         }
     </style>
 </head>
 
-<body onload="start()">
+<body onload="search()">
     <div class="header">
         {{> closebutton.html }}
         {{> helpbutton.html }}
@@ -26,111 +62,92 @@ help_section: "search"
                 <span>Search</span>
             </div>
         </h1>
-        <div class="search">
-            <div class="search_checkboxes">
-                <input class="type" type="checkbox" id="t_birds" onchange="change('t_birds')" />
-                <label for="t_birds">Birds</label>
-                <br />
-                <input class="type" type="checkbox" id="t_animals" onchange="change('t_animals')" />
-                <label for="t_animals">Animals</label>
-                <br />
-                <input class="type" type="checkbox" id="t_herps" onchange="change('t_herps')" />
-                <label for="t_herps">Reptiles &amp; Amphibians</label>
-                <br />
-                <input class="type" type="checkbox" id="t_insects" onchange="change('t_insects')" />
-                <label for="t_insects">Insects</label>
-            </div>
-            <div class="search_checkboxes">
-                <input class="location" type="checkbox" id="l_bc" onchange="change('l_bc')" />
-                <label for="l_bc">British Columbia</label>
-                <br />
-                <input class="location" type="checkbox" id="l_ab" onchange="change('l_ab')" />
-                <label for="l_ab">Alberta</label>
-                <br />
-                <input class="location" type="checkbox" id="l_sk" onchange="change('l_sk')" />
-                <label for="l_sk">Saskatchewan</label>
-                <br />
-                <input class="location" type="checkbox" id="l_mb" onchange="change('l_mb')" />
-                <label for="l_mb">Manitoba</label>
-            </div>
-            <div class="search_checkboxes">
-                <input class="habitat" type="checkbox" id="h_desert" onchange="change('l_mb')" />
-                <label for="h_desert">Desert</label>
-                <br />
-                <input class="habitat" type="checkbox" id="h_forest" onchange="change('l_mb')" />
-                <label for="h_forest">Forest</label>
-                <br />
-                <input class="habitat" type="checkbox" id="h_grassland"
-                    onchange="change('l_mb')" />
-                <label for="h_grassland">Grassland</label>
-                <br />
-                <input class="habitat" type="checkbox" id="h_mountain" onchange="change('l_mb')" />
-                <label for="h_mountain">Mountain</label>
-                <br />
-                <input class="habitat" type="checkbox" id="h_ocean" onchange="change('l_mb')" />
-                <label for="h_ocean">Ocean</label>
-                <br />
-                <input class="habitat" type="checkbox" id="h_urban" onchange="change('l_mb')" />
-                <label for="h_urban">Urban</label>
-                <br />
-                <input class="habitat" type="checkbox" id="h_wetland" onchange="change('l_mb')" />
-                <label for="h_wetland">Wetland</label>
-            </div>
+    </div>
+    
+    <div style="margin-left: 3vw; margin-top: 3vw;">
+        <label for="search"></label>
+        <div style="position: relative;">
+            <input type="text" id="query" autofocus
+            inputmode="search"
+                placeholder="enter words to search for"
+                style="font-size: 150%; padding: .3em; width: 70%;">
+            <image src="/images/search.svg" class="hover"
+                style="width: 1.7em; height: 1.7em; vertical-align: text-bottom;
+                    padding-left: .5em; padding-right: .5em; cursor: pointer;"
+                onclick="search()" />
+             <span class="close-icon" onclick="reset()">x</span>
+       </div>
+        <div style="margin-top: .3em;">
+            <span class="term" onclick="add('BC')">BC</span>
+            <span class="term" onclick="add('AB')">AB</span>
+            <span class="term" onclick="add('SK')">SK</span>
+            <span class="term" onclick="add('MB')">MB</span>
+            <span class="term" onclick="add('desert')">desert</span>
+            <span class="term" onclick="add('forest')">forest</span>
+            <span class="term" onclick="add('grassland')">grassland</span>
+            <span class="term" onclick="add('mountain')">mountain</span>
+            <span class="term" onclick="add('ocean')">ocean</span>
+            <span class="term" onclick="add('urban')">urban</span>
+            <span class="term" onclick="add('wetland')">wetland</span>
         </div>
     </div>
 
-    <div class="list">
-        {{#collections.item}}
-        <div class="item t_{{data.section}}
-            {{#data.location}}l_{{.}} {{/data.location}}
-            {{#data.habitat }}h_{{.}} {{/data.habitat}}"
-            id="{{data.page.fileSlug}}">
-            <a href="/{{data.section}}/{{data.page.fileSlug}}/">
-                <img class="small" src="/photos/{{data.section}}/small/{{data.page.fileSlug}}.jpg" />
-                <div class="name">{{data.name}}</div>
-            </a>
-        </div>
-        {{/collections.item}}
+    <div id="results" class="list">
     </div>
 
+    <script src="/lunr.js"></script>
+    <script src="/map.js"></script>
+    <script src="/idx.js"></script>
     <script>
-        function start() {
-            for (var t of ["birds", "animals", "herps", "insects"])
-                if (window.location.search == "?" + t)
-                    document.getElementById("t_" + t).checked = true;
-            change();
+        var index = lunr.Index.load(idx);
+        function addItem(id) {
+            const dir = map[id][0];
+            const name = map[id][1];
+            var item = document.createElement("div");
+            item.setAttribute('class', "item");
+            var a = document.createElement("a");
+            a.setAttribute('href', "/" + dir + id + "/");
+            var img = document.createElement("img");
+            img.setAttribute('src', "/photos/" + dir + "small/" + id + ".jpg");
+            img.setAttribute('class', "small");
+            a.appendChild(img);
+            var nameDiv = document.createElement("div");
+            nameDiv.setAttribute('class', "name");
+            nameDiv.innerHTML = name;
+            a.appendChild(nameDiv);
+            item.appendChild(a);
+            var results = document.getElementById("results");
+            results.appendChild(item);
         }
-        function change(type) {
-            console.log('CHANGE', type);
-            var types = getChecked('type');
-            var locs = getChecked('location');
-            var habs = getChecked('habitat');
-            // make everything visible
-            var x = document.getElementsByClassName('item');
-            for (var i = 0; i < x.length; i++) {
-                item = x[i];
-                classes = item.classList;
-                if (match(types, classes) &&
-                    match(locs, classes) &&
-                    match(habs, classes))
-                    item.style.display = 'block';
-                else
-                    item.style.display = 'none';
+        const q = document.getElementById("query");
+        q.addEventListener("keyup", function (event) {
+            if (event.key === "Enter")
+                search();
+        });
+        function search() {
+            if (q.value == "")
+                return
+            document.getElementById("results").innerHTML = "";
+            var results = index.search(q.value).slice(0, 10)
+            results.forEach(r => addItem(r.ref))
+            q.blur()
+        }
+        function add(word) {
+            if (q.value.includes(word))
+                q.value = q.value.replace(new RegExp(' ?' + word + ' ?'), ' ');
+            else {
+                if (q.value != "" && !q.value.endsWith(' '))
+                    q.value += ' ';
+                q.value += word;
             }
+            q.value = q.value.trim();
+            if (q.value != "")
+              q.value += ' ';
+            q.focus();
         }
-        function getChecked(className) {
-            let checked = [];
-            var x = document.getElementsByClassName(className);
-            for (var i = 0; i < x.length; i++)
-                if (x[i].checked)
-                    checked.push(x[i].id);
-            return checked;
-        }
-        function match(checked, classes) {
-            for (let c of checked)
-                if (classes.contains(c))
-                    return true;
-            return false;
+        function reset() {
+            q.value = ""
+            document.getElementById("results").innerHTML = "";
         }
     </script>
 
