--- a/animals.html
+++ b/animals.html
@@ -2,6 +2,6 @@
 {
 title: "Animals",
 layout: "type.html",
-items: function() { return this.collections.animal; }
+items: function() { return this.collections.animals; }
 }
 ---
