--- a/birds.html
+++ b/birds.html
@@ -2,6 +2,6 @@
 {
 title: "Birds",
 layout: "type.html",
-items: function() { return this.collections.bird; }
+items: function() { return this.collections.birds; }
 }
 ---
