--- a/herps.html
+++ b/herps.html
@@ -2,6 +2,6 @@
 {
 title: "Reptiles & Amphibians",
 layout: "type.html",
-items: function() { return this.collections.herp; }
+items: function() { return this.collections.herps; }
 }
 ---
