--- a/insects.html
+++ b/insects.html
@@ -2,6 +2,6 @@
 {
 title: "Insects & Spiders",
 layout: "type.html",
-items: function() { return this.collections.insect; }
+items: function() { return this.collections.insects; }
 }
 ---
