--- a/plants.html
+++ b/plants.html
@@ -2,6 +2,6 @@
 {
 title: "Plants",
 layout: "type.html",
-items: function() { return this.collections.plant; }
+items: function() { return this.collections.plants; }
 }
 ---
