--- a/trees.html
+++ b/trees.html
@@ -2,6 +2,6 @@
 {
 title: "Trees & Shrubs",
 layout: "type.html",
-items: function() { return this.collections.tree; }
+items: function() { return this.collections.trees; }
 }
 ---
