switch image to img

--- a/search.html
+++ b/search.html
@@ -64,7 +64,7 @@ help_section: "search"
             <input type="text" id="query" autofocus inputmode="search"
                 placeholder="enter words to search for"
                 style="font-size: 150%; padding: .3em; width: 70%;">
-            <image src="/images/search.svg"
+            <img src="/images/search.svg"
                 style="width: 1.7em; height: 1.7em; vertical-align: text-bottom;
                     padding-left: .5em; padding-right: .5em; cursor: pointer;"
                 onclick="search()" />
