switch image to img

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         {{> helpbutton.html }}
         {{> searchbutton.html }}
         <div class="header-left">
-            <image id="logo" src="images/naturecompanion.svg" />
-            <image id="title" src="images/title.svg" />
+            <img id="logo" src="images/naturecompanion.svg" />
+            <img id="title" src="images/title.svg" />
         </div>
     </div>
     <div style="position:absolute; right: 5px; bottom: 5px; color: white;">
@@ -27,27 +27,27 @@
 
     <div class="container">
         <a href="birds/" class="group">
-            <image class="icon" src="images/birds.svg" />
+            <img class="icon" src="images/birds.svg" />
             <div class="label">Birds</div>
         </a>
         <a href="animals/" class="group">
-            <image class="icon" src="images/animals.svg" />
+            <img class="icon" src="images/animals.svg" />
             <div class="label">Animals</div>
         </a>
         <a href="plants/" class="group">
-            <image class="icon" src="images/plants.svg" />
+            <img class="icon" src="images/plants.svg" />
             <div class="label">Plants</div>
         </a>
         <a href="herps/" class="group">
-            <image class="icon" src="images/herps.svg" />
+            <img class="icon" src="images/herps.svg" />
             <div class="label">Reptiles&nbsp;&amp;<br />Amphibians</div>
         </a>
         <a href="insects/" class="group">
-            <image class="icon" src="images/insects.svg" />
+            <img class="icon" src="images/insects.svg" />
             <div class="label">Insects&nbsp;&amp;<br />Spiders</div>
         </a>
         <a href="trees/" class="group">
-            <image class="icon" src="images/trees.svg" />
+            <img class="icon" src="images/trees.svg" />
             <div class="label">Trees&nbsp;&amp;<br />Shrubs</div>
         </a>
     </div>
