make logo reload

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         {{> helpbutton.html }}
         {{> searchbutton.html }}
         <div class="header-left">
-            <img id="logo" src="images/naturecompanion.svg" />
+            <img id="logo" src="images/naturecompanion.svg" 
+                onclick="window.location.reload(true)"/>
             <img id="title" src="images/title.svg" />
         </div>
     </div>
