add social media og:image screenshot

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
     {{> head.html }}
+<meta property="og:url" content="https://www.naturecompanion.ca" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Nature Companion" />
+<meta property="og:description" content="An introductory nature guide to the plants and animals of Western Canada" />
+<meta property="og:image"
+    content="https://www.naturecompanion.ca/images/screenshot.jpg" />
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 </head>
 
 <body>
