--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <img id="title" src="images/title.svg" />
         </div>
     </div>
+    
+    <a href="" id="install-link">
+        <button id="install-button">Install</button>
+    </a>
 
     <div class="container">
         <a href="birds/" class="group">
@@ -57,6 +61,18 @@
                 navigator.serviceWorker.register('/service-worker.js')
             });
         }
-    </script>
+        const isIos = /iphone|ipad|ipod/.test(
+            window.navigator.userAgent.toLowerCase()) ||
+            typeof navigator.standalone !== "undefined";
+        const isAndroid = /android/.test(
+            window.navigator.userAgent.toLowerCase());
+        const isPwa = window.matchMedia('(display-mode: standalone)').matches;
+        
+        if (!isPwa && (isIos || isAndroid)) {
+            document.getElementById("install-button").style.display = "inline-block";
+            document.getElementById("install-link").href = 
+                (isIos ? "help/#install-ios" : "help/#install-android");
+        }
+   </script>
 </body>
 </html>
