--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
+<link rel="me" href="https://mstdn.ca/@ecofriendlywest" />
 </head>
 
 <body>
